--- a/src/assets/sass/components/_home.sass
+++ b/src/assets/sass/components/_home.sass
@@ -1,4 +1,6 @@
 .home
+  &__last
+    margin-bottom: 1.5rem
   &__up
     position: fixed
     bottom: 2rem
@@ -68,7 +70,6 @@
 .last
   box-shadow: $shadow
   border-radius: 1rem
-  margin-bottom: 1.5rem
   &__title
     font-size: 2rem
     padding: .5rem 0 0 1rem
