--- a/src/assets/sass/index.sass
+++ b/src/assets/sass/index.sass
@@ -8,4 +8,4 @@
 @import 'components/single'
 @import 'components/own'
 @import 'components/favorites'
-@import 'components/new'
+@import 'components/editor'
