--- a/src/assets/sass/_global.sass
+++ b/src/assets/sass/_global.sass
@@ -24,13 +24,15 @@ body
   margin: 0 auto
 
 .btn
+  display: inline-block
   line-height: 3rem
   color: #fff
   padding: 0 1.5rem
   border-radius: .5rem
   background-color: $accent
   transition: box-shadow .2s, background-color .2s
-  &:hover
+  &:hover,
+  &:focus
     color: #fff
     box-shadow: $shadow
   &:active
@@ -46,6 +48,13 @@ body
   transition: box-shadow .2s
   &:focus
     box-shadow: $shadow
+  &--file
+    display: block
+    height: 3.2rem
+    border-width: 2px
+    border-style: dashed
+    input
+      opacity: 0
 
 .title
   font-size: 2.4rem
@@ -74,6 +83,7 @@ body
       margin-bottom: .25rem
 
 .cross
+  flex-shrink: 0
   width: 2rem
   height: 2rem
   border-radius: 50%
@@ -111,3 +121,7 @@ body
   &__input,
   &__textarea
     margin-bottom: 1rem
+
+em
+  font-style: normal
+  color: red
