--- a/src/assets/sass/components/_editor.sass
+++ b/src/assets/sass/components/_editor.sass
@@ -1,4 +1,4 @@
-.new
+.editor
   padding-bottom: 1.5rem
   &__form
     display: flex
@@ -7,9 +7,6 @@
     display: flex
     flex-direction: column
     margin-bottom: 1rem
-    em
-      font-style: normal
-      color: red
   &__caption
     font-size: 2rem
     margin-bottom: .8rem
@@ -33,6 +30,18 @@
       height: 3rem
       border-radius: 2.5rem
       background: $accent url(../../img/icons/plus.svg) center / 1.4rem no-repeat
+  &__img
+    margin-bottom: 1rem
+    &-btn
+      margin-bottom: 1rem
+      &--url
+        margin-right: 1rem
+      &:not(.active)
+        color: $accent
+        background-color: #fff
+        border: 1px solid $accent
+  &__input
+    width: 100%
   &__instructions
     margin-bottom: 1.2rem
     &-list
@@ -46,10 +55,11 @@
         margin-bottom: .4rem
       &::before
         content: 'Шаг ' counter(index)
-        width: 100%
         font-size: 1.8rem
+        line-height: 2.8rem
+        margin-right: 1rem
     &-text
-      margin-right: 1rem
+      flex-basis: 100%
     &-add
       display: block
       width: 6rem
